Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@
 }
 
 .pwd-raceconductor {
-  height: 77vh;
+  height: 75vh;
   right: -17px;
   overflow-y: scroll;
   position: relative;
